# anemoi-graphs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTORS.md  README.md  dynamic_vis.ipynb  example_graph_config.yaml  pyproject.toml
.github/: ci-config.yml  ci-hpc-config.yml
.github/workflows/: changelog-release-update.yml  ci.yml  python-publish.yml  python-pull-request.yml  readthedocs-pr-update.yml
docs/: conf.py  index.rst  installing.rst  modules.rst  overview.rst
docs/_static/: hetero_data_graph.txt
docs/cli/: create.rst  describe.rst  inspect.rst  introduction.rst
docs/dev/: code_structure.rst  contributing.rst  testing.rst
docs/graphs/: edge_attributes.rst  edges.rst  introduction.rst  node_attributes.rst  node_coordinates.rst  post_processor.rst
docs/graphs/edges/: cutoff.rst  knn.rst  multi_scale.rst  multi_scale_hex_refinement.rst  multi_scale_tri_refinement.rst  tri_refined_edges.csv
docs/graphs/node_attributes/: boolean_operations.rst  masks.rst  weights.rst  zarr_attribute.rst
docs/graphs/node_coordinates/: healpix.csv  healpix.rst  hex_refined.csv  hex_refined_icosahedron.rst  icon_mesh.rst  latlon_arrays.rst  npz_file.rst  rectilinear.rst  stretched_tri_refined_icosahedron.rst  text_file.rst  tri_nodes.csv  tri_refined_icosahedron.rst  zarr_dataset.rst
docs/graphs/yaml/: attributes_bool-masks.yaml  attributes_boolean_operation.yaml  attributes_cutout-masks.yaml  (+4 more)
docs/modules/: dates.rst  edge_attributes.rst  edge_builder.rst  graph_creator.rst  graph_inspector.rst  masks.rst  node_attributes.rst  node_builder.rst  post_processor.rst
docs/usage/: getting_started.rst  limited_area.rst
notebooks/: dynamic_vis.ipynb
tests/: conftest.py  test_create.py  test_dynamic.py  test_graphs.py  test_normaliser.py  test_normalizer.py  test_utils.py
tests/edges/: test_attributes.py  test_cutoff.py  test_cutoff_edges.py  test_edge_attributes.py  test_hex_refined_icosahedral.py  test_hexagonal_edges.py  test_knn.py  test_multiscale_edges.py  test_tri_icosahedral_edges.py
tests/generate/: test_masks.py
tests/nodes/: test_arrays.py  test_cutout_nodes.py  test_healpix.py  test_hex_icosahedral_nodes.py  test_hex_nodes.py  test_hex_refined_icosahedral.py  test_hexagonal_nodes.py  test_icon.py  test_node_attributes.py  test_npz.py  test_tri_icosahedral_nodes.py  test_tri_nodes.py  test_tri_refined_icosahedral.py  test_weights.py  test_zarr.py  test_zarr_nodes.py
tests/processors/: test_post_process.py
(+72 files in other folders)
